--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,9 @@ header {
 .menucontaier{
     font-size: 0;
 }
+#nav {
+    margin: 0px;
+}
 #nav li{
     font-size: 14px;
     padding: 0;
@@ -69,9 +72,31 @@ header {
     text-align: center;
     padding: 0;
 }
-menuitem a{
+.menuitem a{
 width: 100%;
 text-decoration: none;
 color: #fff;
 height: 120px;
+}
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fff;
+    font-size: 26px;
+}
+.menuitem span{
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+/*-------------------------- hover.css */
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
