--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,9 @@ background-color: #676;
 .ui-menu-color-download{
     background-color: #525252;
 }
+.bg-color-three-reasons{
+    background-color: #fff;
+}
 
 /*-------------------------- Speacial padding, margin, text */
 h1,h2,h3,h4{
@@ -33,6 +36,23 @@ h1,h2,h3,h4{
 }
 .inline-block{
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 /*-------------------------- heading */
 .heading{
