--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,3 +198,34 @@ footer {
 .three-reasons-heading {
     margin-bottom: 15px;
 }
+/*-------------------------- Personal info */
+.personal-info-items{
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+.personal-info-items .key,
+ .personal-info-items .value{
+padding-right: 8px;
+display: inline-block;
+}
+
+.personal-info-items .key p,
+ .personal-info-items .value p{
+    margin: 0;
+ }
+
+ .personal-info-items .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+ }
+ .personal-info-items .key p {
+    font-weight: 700;
+
+ }
+ .personal-info-items .value {
+    position: relative;
+    width: 60%;
+ }
