--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@ background-color: #676;
 .bg-color-work-history {
     background-color: #9b599b;
 }
+.bg-color-contact {
+    background-color: #fff;
+}
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -296,4 +299,32 @@ display: inline-block;
 
 .history-items {
     margin-bottom: 30px;
+}
+/*-------------------------- Contact Form */
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+.ceter-form {
+    padding-top: 10px;
+    margin-bottom: 0 auto;
+    max-width: 70%;
+}
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+/* ----------------------------------------Media Queries */
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
