add fatema's picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpeg");
+    background: url("../images/Fatema.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
