--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,72 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*-------------------------- colors */
-.bg-color-name-title{
-background-color: #676;
+/*--------------------------------------------Colors*/
+
+.bg-color-name-title {
+    background-color: #676767;
 }
+
+.bg-color-three-reasons {
+    background-color: #ffffff;
+}
+
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
+
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
 .bg-color-work-history {
-    background-color: #9b599b;
+    background-color: #9b59b6;
 }
+
 .bg-color-contact {
-    background-color: #fff;
+    background-color: #ffffff;
 }
-.ui-menu-color-home{
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
+.ui-menu-color-home {
     background-color: #e67e22;
 }
 
-.ui-menu-color-resume{
-    background-color: #9b599b;
+.ui-menu-color-resume {
+    background-color: #9b59b6;
 }
-.ui-menu-color-contact{
+
+.ui-menu-color-contact {
     background-color: #3498db;
 }
-.ui-menu-color-download{
-    background-color: #525252;
+
+.ui-menu-color-download {
+    background-color: #d9a81d;
 }
-.bg-color-three-reasons{
-    background-color: #fff;
+
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
 }
 
 /*-------------------------- Speacial padding, margin, text */
